Added link to Github repo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Hélèna Milletti and is open sourced on
-      <a href="#" target="_blank">Github</a>
+      <a href="https://github.com/Helen-MLT/world-clock" target="_blank"
+        >Github</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
