Added the basic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock - Hélèna Milletti</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Paris</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">21:04 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">21:04 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Hélèna Milletti and is open sourced on
       <a href="https://github.com/Helen-MLT/world-clock" target="_blank"
