Styled project with CSS

--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">21:04 PM</div>
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+        <div class="time">21:04 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">21:04 PM</div>
+        <div>
+          <h2>San Francisco</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+        <div class="time">21:04 <small>PM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Hélèna Milletti and is open sourced on
+      This project was coded by <strong>Hélèna Milletti</strong> and is open
+      sourced on
       <a href="https://github.com/Helen-MLT/world-clock" target="_blank"
         >Github</a
       >
