Adding more custom CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Urbanist:ital,wght@0,100..900;1,100..900&family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+10&family=Major+Mono+Display&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Urbanist:ital,wght@0,100..900;1,100..900&family=VT323&display=swap"
       rel="stylesheet"
     />
 
@@ -28,14 +28,14 @@
           <h2>Tokyo</h2>
           <div class="date">August 15th 2024</div>
         </div>
-        <div class="time">21:04 <small>PM</small></div>
+        <div class="time">21:04 <small>pm</small></div>
       </div>
       <div class="city">
         <div>
           <h2>San Francisco</h2>
           <div class="date">August 15th 2024</div>
         </div>
-        <div class="time">21:04 <small>PM</small></div>
+        <div class="time">21:04 <small>pm</small></div>
       </div>
     </div>
     <footer>
