Adding JS code for date + time zone

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+10&family=Major+Mono+Display&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Urbanist:ital,wght@0,100..900;1,100..900&family=VT323&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
 
     <title>World Clock - Hélèna Milletti</title>
   </head>
@@ -23,19 +25,19 @@
         <option value="">Paris</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="tokyo">
         <div>
           <h2>Tokyo</h2>
-          <div class="date">August 15th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">21:04 <small>pm</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="new-york">
         <div>
-          <h2>San Francisco</h2>
-          <div class="date">August 15th 2024</div>
+          <h2>New York</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">21:04 <small>pm</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
