changing city in the dropdown

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <select id="city">
         <option value="">Select a city..</option>
         <option value="Europe/London">London</option>
-        <option value="America/New_York">New York</option>
+        <option value="Australia/Sydney">Sydney</option>
         <option value="Europe/Paris">Paris</option>
       </select>
 
