Added current location

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="Australia/Sydney">Sydney</option>
         <option value="Europe/Paris">Paris</option>
