Added link to h1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1><a href="/"></a>World Clock</h1>
 
       <select id="city">
         <option value="">Select a city..</option>
